<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:minHeight="48dp"
        android:id="@+id/etUsernameOrEmail"
        android:hint="Username atau Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:minHeight="48dp"
        android:id="@+id/etPassword"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />


    <Button
        android:id="@+id/btnLogin"
        android:text="Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" />


    <Button
        android:id="@+id/btnGoToRegister"
        android:text="Belum punya akun? Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LOGIN DENGAN AKUN GOOGLE"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/ivGoogleLogin"
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/google_logo"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
