<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/menu_konten"
        android:icon="@drawable/ic_konten"
        android:title="Market" />
    <item
        android:id="@+id/menu_tentang"
        android:icon="@drawable/ic_tentang"
        android:title="Tentang" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_settings"
        android:title="Setting" />
</menu>
